writing-to-temporary: Whitelist QTextTableCell

It's an indirection to QTextTable so it's fine

BUG: 363428