checks/writingtotemporary.cpp
@@ -71,7 +71,7 @@ static bool isKnownType(const string &className)
                                           "QByteArray", "QUrl", "QVarLengthArray", "QLinkedList",
                                           "QRect", "QRectF", "QBitmap", "QVector2D", "QVector3D",
                                           "QVector4D", "QSize", "QSizeF", "QSizePolicy", "QPoint",
-                                          "QPointF", "QColor" };
+                                          "QPointF", "QColor", "QTextTableCell" };
 
     return clazy_std::contains(types, className);
 }
